--- a/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
@@ -132,10 +132,10 @@
                     <TextBlock
                         FontSize="14"
                         x:Name="volumeBlock"
+                        Text="0"
                         Width="30"
                         Margin="0,5,5,5"
                         VerticalAlignment="Center"
-                        Grid.Column="2"
                         HorizontalAlignment="Center"
                         TextAlignment="Center"
                         />
@@ -257,6 +257,35 @@
                         Width="185"
                         Height="35"
                         Margin="5,5,5,5"
+                        />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock
+                        Text="Upload Interval"
+                        TextAlignment="Right"
+                        VerticalAlignment="Center"
+                        Width="120"
+                        Margin="5,5,5,5"
+                        />
+                    <Slider
+                        x:Name="uploadSlider"
+                        Width="210"
+                        Margin="10,5,5,5"
+                        IsSnapToTickEnabled="True"
+                        Maximum="120"
+                        Minimum="10"
+                        TickFrequency="5"
+                        ValueChanged="uploadSlider_ValueChanged"
+                        />
+                    <TextBlock
+                        FontSize="14"
+                        x:Name="uploadBlock"
+                        Text="10"
+                        Width="30"
+                        Margin="0,5,5,5"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        TextAlignment="Center"
                         />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
