Fixed an issue with the Ignore Within label width on the locations page if the event was time based. Changed the about page icon so it isn't a gear like the settings page. Started adding help html/icons/css/javascript/images.

--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -167,7 +167,7 @@
                     Width="142"
                     >
                     <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Settings24" />
+                        <ui:SymbolIcon Symbol="QuestionCircle24" />
                     </ui:NavigationViewItem.Icon>
                 </ui:NavigationViewItem>
             </ui:NavigationView.FooterMenuItems>
