--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -97,7 +97,7 @@
                 <ComboBoxItem Content="Name" />
                 <ComboBoxItem Content="Bib" />
             </ComboBox>
-            <TextBox 
+            <ui:AutoSuggestBox 
                 Name="SearchBox"
                 Margin="10,0,10,0"
                 TextChanged="SearchBox_TextChanged"
@@ -105,6 +105,7 @@
                 Height="45"
                 VerticalContentAlignment="Center"
                 HorizontalContentAlignment="Center"
+                PlaceholderText="Search"
                 />
             <Button 
                 Name="Add"
