--- a/ChronoKeep/help/css/style.css
+++ b/ChronoKeep/help/css/style.css
@@ -6,6 +6,15 @@
     min-height: 100vh;
 }
 main {
-    height: 100vh;
     min-height: 100vh;
+}
+.ckeep-nav {
+    padding-top: 1rem !important;
+}
+.offcanvas-header {
+    padding-bottom: 0rem !important;
+}
+.navbar-brand {
+    padding-bottom: 1rem !important;
+    padding-top: 0.8rem !important;
 }
