--- a/ChronoKeep/UI/MainPages/AboutPage.xaml
+++ b/ChronoKeep/UI/MainPages/AboutPage.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
         mc:Ignorable="d"
-        d:DesignHeight="450" d:DesignWidth="800"
+        d:DesignHeight="550" d:DesignWidth="800"
         Title="AboutPage"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         FlowDirection="LeftToRight"
@@ -134,13 +134,23 @@
             FontWeight="Medium"
             Text="Application Folders"
             />
-        <ui:HyperlinkButton
-            Click="OpenDataFolder_Click"
-            Content="Data"
-            >
-            <ui:HyperlinkButton.Icon>
-                <ui:SymbolIcon Symbol="Folder24"/>
-            </ui:HyperlinkButton.Icon>
-        </ui:HyperlinkButton>
+        <StackPanel Orientation="Horizontal">
+            <ui:HyperlinkButton
+                Click="OpenDataFolder_Click"
+                Content="Data"
+                >
+                <ui:HyperlinkButton.Icon>
+                    <ui:SymbolIcon Symbol="Folder24"/>
+                </ui:HyperlinkButton.Icon>
+            </ui:HyperlinkButton>
+            <ui:HyperlinkButton
+                Name="HelpDocsButton"
+                Content="Help Docs"
+                >
+                <ui:HyperlinkButton.Icon>
+                    <ui:SymbolIcon Symbol="Link24"/>
+                </ui:HyperlinkButton.Icon>
+            </ui:HyperlinkButton>
+        </StackPanel>
     </StackPanel>
 </Page>
