Adjusted all html pages to use the style of the index (getting started) page. Added content to the index page.

--- a/ChronoKeep/help/css/style.css
+++ b/ChronoKeep/help/css/style.css
@@ -18,3 +18,7 @@ main {
     padding-bottom: 1rem !important;
     padding-top: 0.8rem !important;
 }
+.chrono-container {
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+}
