Adding the ability to change the displayed clock time relative to a distance/wave time.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -35,6 +35,14 @@
                     FontWeight="Bold"
                     FontSize="40"
                     />
+                <ComboBox
+                    Name="EllapsedRelativeToBox"
+                    Margin="0,0,0,5"
+                    Width="250"
+                    Height="35"
+                    HorizontalAlignment="Stretch"
+                    SelectionChanged="EllapsedRelativeToBox_SelectionChanged"
+                    Visibility="Collapsed" />
                 <StackPanel
                     Orientation="Horizontal"
                     Width="200"
