Adding SMS Enabled fields to EventSpecific and Distances. Changed namespace for TimeResult object to match folders. Added Year field to the Event object for messaging purposes. Added code to send SMS alerts when a runner finishes if enabled on the distance (shouldn't be enabled before the distance starts) and the participant (for that event). Fixed some issues caused by the updating of WPF-UI.

--- a/ChronoKeep/IO/HtmlTemplates/HtmlParticipantTemplate.tt
+++ b/ChronoKeep/IO/HtmlTemplates/HtmlParticipantTemplate.tt
@@ -4,6 +4,7 @@
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="Chronokeep" #>
+<#@ import namespace="Chronokeep.Objects" #>
 <!doctype html>
 <html lang="en">
 	<head>
