Some routine code cleanup. We now add a result to the LastSeen dictionary so when we check it we actually see the last seen time. Changed how we deal with code on the raw reads page. It no longer does async loading of data due to crashing issues when loading large amounts of raw reads. It also will not refresh raw reads while open.

--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -42,6 +42,8 @@
                     Grid.Row="1"
                     AlternationCount="2"
                     ItemContainerStyle="{StaticResource alternatingStyle}"
+                    Margin="0,0,0,0"
+                    Loaded="updateListView_Loaded"
                     >
                 <ListView.ItemTemplate>
                     <DataTemplate>
