Renamed Registration.Worker to Registration.RegistrationWorker. Added button to control whether or not the registration thread is running. Zero conf server no longer starts with the program, it starts when registration thread starts.

--- a/ChronoKeep/UI/MainPages/DashboardPage.xaml
+++ b/ChronoKeep/UI/MainPages/DashboardPage.xaml
@@ -180,6 +180,16 @@
                 HorizontalAlignment="Stretch"
                 Height="40"
                 />
+            <Button
+                Name="registrationButton"
+                Content="Start Registration"
+                Margin="0,5,0,5"
+                Click="registrationButton_Click"
+                FontSize="16"
+                VerticalContentAlignment="Center"
+                HorizontalAlignment="Stretch"
+                Height="40"
+                />
         </StackPanel>
     </Grid>
 </Page>
