--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -10,8 +10,12 @@
       d:DesignHeight="700" d:DesignWidth="800"
       Title="SettingsPage">
 
-    <StackPanel>
-        <Grid>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
@@ -51,91 +55,125 @@
                 Width="175"
                 />
         </Grid>
-        <Grid>
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="4*"/>
                 <ColumnDefinition Width="300"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0">
-                <DockPanel>
-                    <TextBlock Text="Company Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
-                    <TextBox Name="CompanyNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
-                </DockPanel>
-                <DockPanel>
-                    <TextBlock Text="Contact Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
-                    <TextBox Name="ContactEmailBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
-                </DockPanel>
-                <DockPanel Grid.Column="0">
-                    <TextBlock Text="Default Timing System" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
-                    <ComboBox Name="DefaultTimingBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
-                </DockPanel>
-                <DockPanel Grid.Column="0">
-                    <TextBlock Text="Theme Color" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
-                    <ComboBox Name="ThemeColorBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" SelectionChanged="ThemeColorBox_SelectionChanged" />
-                </DockPanel>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="190"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="100"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Text="Export Directory" FontSize="14" Margin="10,10,10,10" Grid.Column="0" VerticalAlignment="Center"/>
-                    <TextBox Name="DefaultExportDirBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
-                    <Button Name="ChangeExport" FontSize="14" Height="35" Margin="0,10,10,10" HorizontalAlignment="Stretch" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
-                </Grid>
-                <Grid Height="55">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="190" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="40" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Text="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" Grid.Column="0"/>
-                    <Slider x:Name="uploadSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="uploadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
-                    <TextBlock FontSize="14" x:Name="uploadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
-                </Grid>
-                <Grid Height="55">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="190" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="40" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Text="Download Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
-                    <Slider x:Name="downloadSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="downloadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
-                    <TextBlock FontSize="14" x:Name="downloadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
-                </Grid>
-                <Grid Height="55">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="190" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="40" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Text="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
-                    <Slider x:Name="announcerSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="announcerSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
-                    <TextBlock FontSize="14" x:Name="announcerBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
-                </Grid>
-                <DockPanel>
-                    <TextBlock Text="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
-                    <Button Content="Play" Height="35" Width="50" Name="PlayBtn" Click="PlayBtn_Click"  FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center"/>
-                    <ComboBox Name="AlarmSoundBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center">
-                        <ComboBoxItem Content="Alert 1" Uid="1" IsSelected="True"/>
-                        <ComboBoxItem Content="Alert 2" Uid="2"/>
-                        <ComboBoxItem Content="Alert 3" Uid="3"/>
-                        <ComboBoxItem Content="Alert 4" Uid="4"/>
-                        <ComboBoxItem Content="Alert 5" Uid="5"/>
-                        <ComboBoxItem Content="Emily 1" Uid="6"/>
-                        <ComboBoxItem Content="Emily 2" Uid="7"/>
-                        <ComboBoxItem Content="Emily 3" Uid="8"/>
-                        <ComboBoxItem Content="Michael 1" Uid="9"/>
-                        <ComboBoxItem Content="Michael 2" Uid="10"/>
-                        <ComboBoxItem Content="Michael 3" Uid="11"/>
-                    </ComboBox>
-                </DockPanel>
-            </StackPanel>
+            <ScrollViewer VerticalScrollBarVisibility="Visible">
+                <StackPanel Grid.Column="0">
+                    <DockPanel>
+                        <TextBlock Text="Company Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="CompanyNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Contact Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="ContactEmailBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel Grid.Column="0">
+                        <TextBlock Text="Default Timing System" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <ComboBox Name="DefaultTimingBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel Grid.Column="0">
+                        <TextBlock Text="Theme Color" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <ComboBox Name="ThemeColorBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" SelectionChanged="ThemeColorBox_SelectionChanged" />
+                    </DockPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="100"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Export Directory" FontSize="14" Margin="10,10,10,10" Grid.Column="0" VerticalAlignment="Center"/>
+                        <TextBox Name="DefaultExportDirBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
+                        <Button Name="ChangeExport" FontSize="14" Height="35" Margin="0,10,10,10" HorizontalAlignment="Stretch" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
+                    </Grid>
+                    <Grid Height="55">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="40" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" Grid.Column="0"/>
+                        <Slider x:Name="uploadSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="uploadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                        <TextBlock FontSize="14" x:Name="uploadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                    </Grid>
+                    <Grid Height="55">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="40" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Download Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                        <Slider x:Name="downloadSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="downloadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                        <TextBlock FontSize="14" x:Name="downloadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                    </Grid>
+                    <Grid Height="55">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="40" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                        <Slider x:Name="announcerSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="announcerSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                        <TextBlock FontSize="14" x:Name="announcerBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                    </Grid>
+                    <DockPanel>
+                        <TextBlock Text="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                        <Button Content="Play" Height="35" Width="50" Name="PlayBtn" Click="PlayBtn_Click"  FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center"/>
+                        <ComboBox Name="AlarmSoundBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center">
+                            <ComboBoxItem Content="Alert 1" Uid="1" IsSelected="True"/>
+                            <ComboBoxItem Content="Alert 2" Uid="2"/>
+                            <ComboBoxItem Content="Alert 3" Uid="3"/>
+                            <ComboBoxItem Content="Alert 4" Uid="4"/>
+                            <ComboBoxItem Content="Alert 5" Uid="5"/>
+                            <ComboBoxItem Content="Emily 1" Uid="6"/>
+                            <ComboBoxItem Content="Emily 2" Uid="7"/>
+                            <ComboBoxItem Content="Emily 3" Uid="8"/>
+                            <ComboBoxItem Content="Michael 1" Uid="9"/>
+                            <ComboBoxItem Content="Michael 2" Uid="10"/>
+                            <ComboBoxItem Content="Michael 3" Uid="11"/>
+                        </ComboBox>
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Registration Server Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="RegistrationServerNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Twilio Account SID" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="TwilioAccountSIDBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Twilio Auth Token" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="TwilioAuthTokenBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Twilio Phone Number" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="TwilioPhoneNumberBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Mailgun From Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="MailgunFromNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Mailgun From Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="MailgunFromEmailBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Mailgun API Key" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="MailgunAPIKeyBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Mailgun API URL" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBox Name="MailgunAPIURLBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    </DockPanel>
+                </StackPanel>
+            </ScrollViewer>
             <StackPanel Grid.Column="1">
                 <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
                 <CheckBox Name="ExitNoPrompt" Content="Never prompt before exit?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
                 <CheckBox Name="CheckUpdates" Content="Check for updates?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
             </StackPanel>
         </Grid>
-    </StackPanel>
+    </Grid>
 </Page>
