--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -164,7 +164,7 @@
                         <TextBox Name="MailgunAPIKeyBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Mailgun API URL" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <TextBlock Text="Mailgun Domain" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="MailgunAPIURLBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                 </StackPanel>
