--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -134,6 +134,86 @@
                 Click="Remove_Click"
                 HorizontalAlignment="Stretch"
                 />
+            <Expander
+                    Name="statsExpander"
+                    Header="Bibs"
+                    Margin="5,5,5,0"
+                    IsExpanded="True"
+                    Visibility="Collapsed"
+                    >
+                <StackPanel>
+                    <Grid Margin="3,0,3,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="75" />
+                            <ColumnDefinition Width="35" />
+                            <ColumnDefinition Width="35" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock 
+                                Grid.Column="0"
+                                Margin="2,4"
+                                Text="Distance"
+                                FontSize="12"
+                                VerticalAlignment="Center"
+                                />
+                        <TextBlock
+                                Grid.Column="1"
+                                Margin="2,4"
+                                Text="w/"
+                                FontSize="12"
+                                VerticalAlignment="Center"
+                                />
+                        <TextBlock 
+                                Grid.Column="2"
+                                Margin="2,4"
+                                Text="w/o"
+                                FontSize="12"
+                                VerticalAlignment="Center"
+                                />
+                    </Grid>
+                    <ListView 
+                            x:Name="statsListView" 
+                            VerticalAlignment="Stretch"
+                            HorizontalAlignment="Stretch"
+                            VerticalContentAlignment="Top"
+                            SelectionMode="Single"
+                            FontSize="10"
+                            ScrollViewer.CanContentScroll="False"
+                            ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="75" />
+                                        <ColumnDefinition Width="35" />
+                                        <ColumnDefinition Width="35" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock
+                                            Grid.Column="0"
+                                            Margin="2,4" 
+                                            Text="{Binding DistanceName}"
+                                            FontSize="12"
+                                            VerticalAlignment="Center"
+                                            />
+                                    <TextBlock 
+                                            Grid.Column="1"
+                                            Margin="2,4"
+                                            Text="{Binding With}" 
+                                            FontSize="12" 
+                                            VerticalAlignment="Center"
+                                            />
+                                    <TextBlock
+                                            Grid.Column="2"
+                                            Margin="2,4"
+                                            Text="{Binding Without}"
+                                            FontSize="12"
+                                            VerticalAlignment="Center"
+                                            />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
+            </Expander>
         </StackPanel>
         <Grid>
             <Grid.Resources>
