Changed email/sms alert sent recordings from bib based to event specific based. Added method to get basic chipread information for program's safemode operation. Removed some log messages and commented code in database chipreads file. Fixed a potential mutex deadlock in GetChipReads methods. Slightly changed the text on the certificate email. Added checks to make sure we don't send SMS/Emails to people when a result doesn't have a specified EventSpecific ID. Send Emails button now changes text when sending emails, then changes back when done and pops up a messagebox saying it sent emails.

--- a/ChronoKeep/IO/HtmlTemplates/HtmlCertificateEmailTemplate.tt
+++ b/ChronoKeep/IO/HtmlTemplates/HtmlCertificateEmailTemplate.tt
@@ -26,7 +26,7 @@
 							<td class="body" style="padding: 20px; text-align: center; font-size: 18px; line-height: 1.6;">
 								<p style="margin-top:10px;">You finished the <#= eventName #><#= distanceName #>! Well done!<br>
 								Your official finish time is <strong><#= time #></strong>.</p>
-								<p>Here's a certificate to celebrate you.</p>
+								<p>Here's a certificate to celebrate your accomplishment.</p>
 								<img src="<#= certificateUrl #>" style="max-width:100%;border-radius:10px;">
 								<#= resultsLink #>
 							</td>
