--- a/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
+++ b/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
@@ -43,6 +43,7 @@
                     <ComboBoxItem Content="10 Years" Uid="1"/>
                     <ComboBoxItem Content="5 Years" Uid="2"/>
                     <ComboBoxItem Content="Under 40, Masters, Grand Masters" Uid="3"/>
+                    <ComboBoxItem Content="Abbott WMM" Uid="4"/>
                 </ComboBox>
                 <Button FontSize="16" Height="35" Content="Change" Name="AddDefault" Click="AddDefault_Click" Margin="10,0,10,0" HorizontalAlignment="Stretch"/>
             </StackPanel>
