Added download button to participants page to download participants from the results API for dynamic bib assignments. Added empty constructor for APIPerson due to Json Deserializer requiring one.

--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -58,6 +58,15 @@
                     HorizontalAlignment="Stretch"
                     />
                 <Button 
+                    Name="Download" 
+                    Content="Download" 
+                    FontSize="14" 
+                    Height="35" 
+                    Margin="10,5,10,5"
+                    Click="Download_Click" 
+                    HorizontalAlignment="Stretch"
+                    />
+                <Button 
                     Name="Delete"
                     Content="Delete Uploaded"
                     FontSize="14"
