Ranking text should auto select all text when focused. Timing systems expander is no longer expanded by default.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -519,7 +519,7 @@
                 MaxHeight="235"
                 Margin="5,0,5,5"
                 HorizontalAlignment="Stretch"
-                IsExpanded="True"
+                IsExpanded="False"
                 ExpandDirection="Down"
                 Grid.Row="0"
                 Expanded="Expander_Expanded"
