Added APIHanlders for adding/removing segments and for getting sms subscriptions. Fixed an issue with UploadParticipants and the check if API was set up. Added code to download/remove segments from the API. Updated the view to allow for the user to upload all of the information possible for a segment.

--- a/ChronoKeep/UI/MainPages/SegmentsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SegmentsPage.xaml
@@ -19,7 +19,12 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
-            <ListBox Name="SegmentsBox" KeyboardNavigation.TabNavigation="Continue" Grid.Row="0" ScrollViewer.CanContentScroll="False" PreviewMouseWheel="SegmentsBox_PreviewMouseWheel">
+            <ListBox Name="SegmentsBox"
+                     KeyboardNavigation.TabNavigation="Continue"
+                     Grid.Row="0"
+                     ScrollViewer.CanContentScroll="False"
+                     PreviewMouseWheel="SegmentsBox_PreviewMouseWheel"
+                     >
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -27,9 +32,15 @@
                     </Style>
                 </ListBox.ItemContainerStyle>
             </ListBox>
-            <DockPanel HorizontalAlignment="Center" Grid.Row="1">
-                <Button Name="UpdateBtn" Content="Update" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Update_Click" />
+            <DockPanel Grid.Row="1" HorizontalAlignment="Center">
+                <DockPanel x:Name="apiPanel" Visibility="Collapsed" HorizontalAlignment="Center">
+                    <Button Name="UploadButton" Content="Upload" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="UploadButton_Click" />
+                    <Button Name="DeleteButton" Content="Delete Uploaded" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="DeleteButton_Click" />
+                </DockPanel>
+                <Button Name="UpdateBtn" Content="Save" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Update_Click" />
                 <Button Name="ResetBtn" Content="Reset" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Reset_Click" />
+            </DockPanel>
+            <DockPanel HorizontalAlignment="Center" Grid.Row="1" Grid.ColumnSpan="2">
             </DockPanel>
         </Grid>
     </Grid>
