--- a/ChronoKeep/UI/API/APIPage3.xaml
+++ b/ChronoKeep/UI/API/APIPage3.xaml
@@ -69,15 +69,17 @@
                     Margin="0,0,0,0"
                     IsSnapToTickEnabled="True"
                     TickFrequency="1"
-                    Minimum="1"
+                    Minimum="0"
                     Maximum="9"
                     ValueChanged="DaysAllowed_ValueChanged"
                     />
                 <TextBlock
                     Name="DaysAllowedText"
-                    Text="1"
+                    Text="0"
+                    Width="20"
                     Margin="10,0,0,0"
                     VerticalAlignment="Center"
+                    TextAlignment="Right"
                     />
             </StackPanel>
             <StackPanel
