--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -115,8 +115,18 @@
                             <ColumnDefinition Width="40" />
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
-                        <Slider x:Name="announcerSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="120" ValueChanged="announcerSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                        <Slider x:Name="announcerSlider" IsSnapToTickEnabled="True" TickFrequency="5" Minimum="15" Maximum="240" ValueChanged="announcerSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
                         <TextBlock FontSize="14" x:Name="announcerBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                    </Grid>
+                    <Grid Height="55">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="40" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Announcer Read Gap (Min)" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                        <Slider x:Name="announcerGapSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="5" Maximum="120" ValueChanged="announcerGapSlider_ValueChanged"  VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                        <TextBlock FontSize="14" x:Name="announcerGapBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
                     </Grid>
                     <DockPanel>
                         <TextBlock Text="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
