Added more filters for showing only specific timing results. Fixed an issue where filtering by only unknown finishes wouldn't actually work when the page was being updated. Apparel now exports. When exporting segments they should now properly be spaced when a segment is missed.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -186,6 +186,9 @@
                         <ComboBoxItem Content="Show Only Unknown" />
                         <ComboBoxItem Content="Show Only Starts" />
                         <ComboBoxItem Content="Show Only Finishes" />
+                        <ComboBoxItem Content="Show Only Unknown" />
+                        <ComboBoxItem Content="Show Only Unknown Starts" />
+                        <ComboBoxItem Content="Show Only Unknown Finishes" />
                     </ComboBox>
                     <ComboBox
                         Name="SortBy"
