Updated NuGet packages. Added RecentTime to Event type for sorting when getting from the API. Changed YearBox to yearCopyBox.

--- a/ChronoKeep/UI/API/APIPage3.xaml
+++ b/ChronoKeep/UI/API/APIPage3.xaml
@@ -37,7 +37,7 @@
                 Margin="0,0,0,10"
                 />
             <ComboBox
-                Name="YearBox"
+                Name="yearCopyBox"
                 Width="200"
                 VerticalAlignment="Center"
                 Margin="0,0,0,5"
